--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,12 @@
-<div>
-  <app-header></app-header>
-  <app-teaser></app-teaser>
-  <app-tickler></app-tickler>
-  <app-products></app-products>
-  <app-video></app-video>
-  <app-purchase></app-purchase>
-  <app-site-map></app-site-map>
-  <app-footer></app-footer>
+<div class="container">
+  <div class="row">
+    <app-header></app-header>
+    <app-teaser></app-teaser>
+    <app-tickler></app-tickler>
+    <app-products></app-products>
+    <app-video></app-video>
+    <app-purchase></app-purchase>
+    <app-site-map></app-site-map>
+    <app-footer></app-footer>
+  </div>
 </div>
