--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,7 @@
-<div class="container">
+<div class="container-fluid">
   <div class="row">
     <app-header></app-header>
+    <app-welcome-banner></app-welcome-banner>
     <app-teaser></app-teaser>
     <app-tickler></app-tickler>
     <app-products></app-products>
