--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -1,3 +1,7 @@
-<p>
-  welcome-banner works!
-</p>
+<div class="row">
+  <div class="col-md-12">
+    <div class="col-md-4 col-md-offset-4">
+      <img src="../assets/teaser.jpg" alt="" id="welcome">
+    </div>
+  </div>
+</div>
