maybe i added some photos

--- a/src/app/tickler/tickler.component.html
+++ b/src/app/tickler/tickler.component.html
@@ -1,3 +1,4 @@
-<p>
-  tickler works!
-</p>
+<h3 class="text-center">
+  "One time I bought a gate from USAutomatic, <br>and all of a sudden my truck started working again"<br><br>
+  -Murray Gonzalez
+</h3>
