--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -3,5 +3,7 @@
     <div class="col-md-4 col-md-offset-4">
       <img src="../assets/teaser.jpg" alt="" id="welcome">
     </div>
+
   </div>
+  <app-teaser></app-teaser>
 </div>
