--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,3 +1,16 @@
-<p>
-  products works!
-</p>
+<div class="row">
+  <div class="col-sm-6"></div>
+  <div class="col-sm-6"></div>
+</div>
+<div class="row">  
+  <div class="col-sm-6"></div>
+  <div class="col-sm-6"></div>
+</div>
+<div class="row">
+  <div class="col-sm-6"></div>
+  <div class="col-sm-6"></div>
+</div>
+<div class="row">
+  <div class="col-sm-6"></div>
+  <div class="col-sm-6"></div>
+</div>
