--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,16 +1,39 @@
 <div class="row">
-  <div class="col-sm-6"></div>
-  <div class="col-sm-6"></div>
-</div>
-<div class="row">  
-  <div class="col-sm-6"></div>
-  <div class="col-sm-6"></div>
-</div>
-<div class="row">
-  <div class="col-sm-6"></div>
-  <div class="col-sm-6"></div>
+  <div class="col-sm-6">
+    <img src="../../assets/product1.jpeg" alt="">
+  </div>
+  <div class="col-sm-6">
+    <img src="../../assets/product1.jpeg" alt="">
+
+  </div>
 </div>
 <div class="row">
-  <div class="col-sm-6"></div>
-  <div class="col-sm-6"></div>
+  <div class="col-sm-6">
+    <img src="../../assets/product1.jpeg" alt="">
+
+  </div>
+  <div class="col-sm-6">
+    <img src="../../assets/product1.jpeg" alt="">
+
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-6">
+    <img src="../../assets/product1.jpeg" alt="">
+
+  </div>
+  <div class="col-sm-6">
+    <img src="../../assets/product1.jpeg" alt="">
+
+  </div>
+</div>
+<div class="row">
+  <div class="col-sm-6">
+    <img src="../../assets/product1.jpeg" alt="">
+
+  </div>
+  <div class="col-sm-6">
+    <img src="../../assets/product1.jpeg" alt="">
+
+  </div>
 </div>
