--- a/src/app/video/video.component.html
+++ b/src/app/video/video.component.html
@@ -1,3 +1,8 @@
-<p>
-  video works!
-</p>
+<div class="row">
+  <h2 class="text-center">
+    How to Install
+  </h2>
+  <!-- <div class="col-xs-offset-2"> -->
+    <iframe width="854" height="480" src="https://www.youtube.com/embed/7GlrxTxTHiE" frameborder="0" allowfullscreen></iframe>
+  <!-- </div> -->
+</div>
