gist of site is there, now to perfect

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,6 +7,6 @@
     <app-video></app-video>
     <app-purchase></app-purchase>
     <app-site-map></app-site-map>
-    <app-footer></app-footer>
+    <app-header></app-header>
   </div>
 </div>
