--- a/src/app/site-map/site-map.component.html
+++ b/src/app/site-map/site-map.component.html
@@ -1,3 +1,19 @@
-<p>
-  site-map works!
-</p>
+<div class="row">
+  <br><br><br><br><br>
+  <div class="col-xs-6 text-center">
+    <ul class="love" style="list-style: none;">
+      <li>Contact</li>
+      <li>Stuff</li>
+      <li>Buy from Amazon</li>
+      <li>Read Wikipedia</li>
+    </ul>
+  </div>
+  <div class="col-xs-6 text-center">
+    <ul class="love" style="list-style: none;">
+      <li>Donate to Africa</li>
+      <li>Delete Site</li>
+      <li>Go to Top</li>
+      <li>Email President</li>
+    </ul>
+  </div>
+</div>
