--- a/src/app/purchase/purchase.component.html
+++ b/src/app/purchase/purchase.component.html
@@ -1,3 +1,5 @@
-<p>
-  purchase works!
-</p>
+<h3 class="text-center">
+  Buy direct through
+</h3>
+
+<img src="../assets/Amazon_logo_plain.svg" alt="">
