added scroll event listener

--- a/src/app/site-map/site-map.component.html
+++ b/src/app/site-map/site-map.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <br><br><br><br><br>
-  <div class="col-xs-6 text-center">
+  <div class="col-xs-6 col-xs-offset-1 text-justify">
     <ul class="love" style="list-style: none;">
       <li>Contact</li>
       <li>Stuff</li>
@@ -8,7 +8,7 @@
       <li>Read Wikipedia</li>
     </ul>
   </div>
-  <div class="col-xs-6 text-center">
+  <div class="col-xs-4 col-xs-offset-1 text-justify">
     <ul class="love" style="list-style: none;">
       <li>Donate to Africa</li>
       <li>Delete Site</li>
