--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,9 +1,24 @@
 :host{
   display: block;
-  background-color: rgb(128,188,163);
-  height: 100px;
+  /*background-color: rgb(128,188,163);
+  height: 100px;*/
+    background-color: rgba(0, 0, 0, 0.2);
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    z-index: 100;
+    padding-top: 25px;
+    font-family: 'brandon-grotesque', sans-serif;
+    -webkit-transition: all 0.8s ease-out;
+    -moz-transition: all 0.8s ease-out;
+    -o-transition: all 0.8s ease-out;
+    transition: all 0.8s ease-out;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    /*z-index: 3;*/
 }
 
-h1{
-  margin-left: 50px;
+img{
+  margin-left: 100px;
+  margin-bottom: 20px;
 }
