--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="row">
   <div class="col-md-6">
-    <h1>Quality Gate Openers</h1>
+    <img src="../../assets/header_bg.png" alt="">
   </div>
 </div>
