--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -1,9 +1,9 @@
 <div class="row">
-  <div class="col-md-12">
-    <div class="col-md-4 col-md-offset-4">
-      <img src="../assets/teaser.jpg" alt="" id="welcome">
-    </div>
+  <!-- <div class="col-md-12"> -->
+    <!-- <div class="col-md-4 col-md-offset-4"> -->
+      <img src="../assets/main.jpg" alt="" id="welcome">
+    <!-- </div> -->
 
-  </div>
-  <app-teaser></app-teaser>
+  <!-- </div> -->
+  <!-- <app-teaser></app-teaser> -->
 </div>
