--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row header" [ngClass]="{dark: this.sharedService.boolChangeClass}">
   <div class="col-md-6">
     <img src="../../assets/header_bg.png" alt="">
   </div>
