--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -1,7 +1,7 @@
 <div class="row">
   <!-- <div class="col-md-12"> -->
     <!-- <div class="col-md-4 col-md-offset-4"> -->
-      <img src="../assets/main.jpg" alt="" id="welcome">
+      <img src="https://j.gifs.com/76E55y.gif" alt="" id="welcome">
     <!-- </div> -->
 
   <!-- </div> -->
