at a point where i need to look again later

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <app-header></app-header>
     <app-welcome-banner></app-welcome-banner>
     <app-tickler></app-tickler>
+    <app-teaser></app-teaser>
     <app-products></app-products>
     <app-video></app-video>
     <app-purchase></app-purchase>
