--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,39 +1,26 @@
 <div class="row">
-  <div class="col-sm-6">
-    <img src="../../assets/product1.jpeg" alt="">
+  <div class="col-sm-4 col-sm-offset-2">
+    <img src="../../assets/promo1-image.png" alt="">
   </div>
-  <div class="col-sm-6">
-    <img src="../../assets/product1.jpeg" alt="">
+  <div class="col-sm-4 col-sm-offset-2">
+    <img src="../../assets/promo2-image.png" alt="">
 
   </div>
 </div>
 <div class="row">
-  <div class="col-sm-6">
-    <img src="../../assets/product1.jpeg" alt="">
+  <div class="col-sm-4 col-sm-offset-2">
+    <img src="../../assets/usauto1.jpg" alt="">
 
   </div>
-  <div class="col-sm-6">
-    <img src="../../assets/product1.jpeg" alt="">
-
-  </div>
-</div>
-<div class="row">
-  <div class="col-sm-6">
-    <img src="../../assets/product1.jpeg" alt="">
-
-  </div>
-  <div class="col-sm-6">
-    <img src="../../assets/product1.jpeg" alt="">
+  <div class="col-sm-4 col-sm-offset-2">
+    <img src="../../assets/usauto2.jpg" alt="">
 
   </div>
 </div>
 <div class="row">
-  <div class="col-sm-6">
-    <img src="../../assets/product1.jpeg" alt="">
+  <div class="col-sm-4 col-sm-offset-2">
+    <img src="../../assets/usauto3.jpg" alt="">
 
   </div>
-  <div class="col-sm-6">
-    <img src="../../assets/product1.jpeg" alt="">
 
-  </div>
 </div>
