--- a/src/app/purchase/purchase.component.html
+++ b/src/app/purchase/purchase.component.html
@@ -1,5 +1,9 @@
-<h3 class="text-center">
-  Buy direct through
-</h3>
+<div class="row">
+  <div class="col-xs-12">
+    <h3 class="text-center">
+      Buy direct through
+    </h3>
 
-<img src="../assets/Amazon_logo_plain.svg" alt="">
+    <img src="../assets/Amazon_logo_plain.svg" alt="">
+  </div>
+</div>
