--- a/src/app/welcome-banner/welcome-banner.component.css
+++ b/src/app/welcome-banner/welcome-banner.component.css
@@ -1,6 +1,6 @@
 :host{
   display: block;
-  /*background-color: rgb(101,86,67);*/
+  background-color: rgb(246,247,189);
   /*background-size: 100% 100%;*/
 
 }
