--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,6 @@
 :host{
   display: block;
+  width: 100%;
   /*background-color: rgb(128,188,163);
   height: 100px;*/
 
@@ -8,7 +9,7 @@
 
 img{
   margin-left: 100px;
-  margin-bottom: 20px;
+  /*margin-bottom: 20px;*/
 }
 
 .header{
@@ -16,6 +17,7 @@ img{
   border-bottom: 1px solid rgba(255, 255, 255, 0.1);
   z-index: 100;
   padding-top: 25px;
+  padding-bottom: 20px;
   font-family: 'brandon-grotesque', sans-serif;
   -webkit-transition: all 0.8s ease-out;
   -moz-transition: all 0.8s ease-out;
@@ -28,6 +30,9 @@ img{
   z-index: 3;
 }
 .dark{
-  background-color: #242424;
+  /*background-color: #242424;*/
+  background-color: rgb(191,77,40);
   border-color: transparent;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
