--- a/src/app/purchase/purchase.component.css
+++ b/src/app/purchase/purchase.component.css
@@ -2,7 +2,7 @@
   display: block;
   background-color: rgb(246,247,189);
   height: 700px;
-  margin-top: 100px;
+  /*margin-top: 100px;*/
 }
 
 h3{
