--- a/src/app/teaser/teaser.component.css
+++ b/src/app/teaser/teaser.component.css
@@ -1,7 +1,18 @@
 :host{
   display: block;
-  background-color: rgb(101,86,67);
-  margin-top: 550px;
-  margin-bottom: 100px;
+  background-color: rgb(246,247,189);
+  /*margin-top: 550px;*/
+  /*margin-bottom: 100px;*/
   /*height: 200px;*/
-};
+  /*width: 100%;*/
+  /*height: 7000px;*/
+}
+
+#welcome {
+  /*display: none;*/
+  /*height: 7000px;*/
+  /*margin-left: 100px;*/
+  width: 100%;
+
+  height: auto;
+}
