--- a/src/app/teaser/teaser.component.html
+++ b/src/app/teaser/teaser.component.html
@@ -1,3 +1,5 @@
-<h1 class="text-center">
-  Buy direct from USAutomatic, guaranteed by Amazon
-</h1>
+<div class="row">
+  <div class="col-xs-10 col-xs-offset-1">
+    <img src="../assets/main.jpg" alt="" id="welcome">
+  </div>
+</div>
