fixed ng serve locally, centered welcome gif

--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -1,9 +1,12 @@
+<!-- <di/v class="container"> -->
+
 <div class="row">
-  <!-- <div class="col-md-12"> -->
+  <div class="col-md-11 col-xs-offset-1">
     <!-- <div class="col-md-4 col-md-offset-4"> -->
       <img src="https://j.gifs.com/76E55y.gif" alt="" id="welcome">
     <!-- </div> -->
 
-  <!-- </div> -->
+  </div>
   <!-- <app-teaser></app-teaser> -->
 </div>
+<!-- </div> -->
