--- a/src/app/welcome-banner/welcome-banner.component.css
+++ b/src/app/welcome-banner/welcome-banner.component.css
@@ -8,7 +8,7 @@
 #welcome {
   /*display: none;*/
   /*height: 7000px;*/
-  margin-left: 100px;
+  /*margin-left: 100px;*/
   width: 90%;
   height: auto;
 }
