--- a/src/app/welcome-banner/welcome-banner.component.css
+++ b/src/app/welcome-banner/welcome-banner.component.css
@@ -1,14 +1,26 @@
 :host{
   display: block;
-  background-color: rgb(246,247,189);
-  /*background-size: 100% 100%;*/
-
+  /*background-color: rgb(246,247,189);*/
 }
 
 #welcome {
-  /*display: none;*/
-  /*height: 7000px;*/
-  /*margin-left: 100px;*/
   width: 90%;
   height: auto;
+}
+
+.jump{
+  background-color: rgb(128,188,163);
+  height: 70px;
+}
+
+.glyphicon{
+  /*position: relative;*/
+  margin-left: 50%;
+  margin-top: 30px;
+}
+
+h3{
+  font-style: italic;
+  margin-top: 275px;
+  margin-bottom: 275px;
 }
