this is broken, best check out prior commit

--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -5,10 +5,11 @@
 </div>
 
 <div class="jump">
-  <span (click)="scroll(jump, tickler)" class="glyphicon glyphicon-chevron-down"></span>
+  <span (click)="scrollTo(jump)" class="glyphicon glyphicon-chevron-down"></span>
 </div>
 
-<h3 #jump class="text-center">
+<h3 class="text-center">
   "One time I bought a gate from USAutomatic, <br>and all of a sudden my truck started working again"<br><br>
   -Murray Gonzalez
 </h3>
+<h3 #jump>4444444444444444444444444<br><br>44444444444444</h3>
