--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -5,11 +5,10 @@
 </div>
 
 <div class="jump">
-  <span (click)="scrollTo(jump)" class="glyphicon glyphicon-chevron-down"></span>
+  <a pageScroll href="#awesomePart"><span class="glyphicon glyphicon-chevron-down"></span></a>
 </div>
 
-<h3 class="text-center">
+<h3 id="awesomePart" class="text-center">
   "One time I bought a gate from USAutomatic, <br>and all of a sudden my truck started working again"<br><br>
   -Murray Gonzalez
 </h3>
-<h3 #jump>4444444444444444444444444<br><br>44444444444444</h3>
