fixed where the page jumps to

--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -8,7 +8,7 @@
   <a pageScroll href="#awesomePart"><span class="glyphicon glyphicon-chevron-down"></span></a>
 </div>
 
-<h3 class="text-center">
+<h3 id="awesomePart" class="text-center">
   "One time I bought a gate from USAutomatic, <br>and all of a sudden my truck started working again"<br><br>
   -Murray Gonzalez
 </h3>
