--- a/src/app/teaser/teaser.component.html
+++ b/src/app/teaser/teaser.component.html
@@ -1,5 +1,5 @@
 <div class="row">
-  <div id="awesomePart" class="col-xs-12"></div>
+  <div class="col-xs-12"></div>
 </div>
 <div class="row">
   <div class="col-xs-10 col-xs-offset-1">
