added link to amazon and actually customer comments

--- a/src/app/purchase/purchase.component.html
+++ b/src/app/purchase/purchase.component.html
@@ -4,6 +4,8 @@
       Buy direct through
     </h3>
 
-    <img src="../assets/Amazon_logo_plain.svg" alt="">
+    <a text-decoration="none" href="https://www.amazon.com/s?marketplaceID=ATVPDKIKX0DER&me=A1DUU5SSOUYI5X&merchant=A1DUU5SSOUYI5X&redirect=true">
+      <img src="../assets/Amazon_logo_plain.svg" alt="">
+    </a>
   </div>
 </div>
