--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -9,6 +9,13 @@
 </div>
 
 <h3 id="awesomePart" class="text-center">
-  "One time I bought a gate from USAutomatic, <br>and all of a sudden my truck started working again"<br><br>
-  -Murray Gonzalez
+  <p>"On time, zero shipping and no tax, and best price!"</p>
+  <p>-Wolf on September 2, 2016.</p>
+<br>
+  <p>Everything excellent!</p>
+  <p>-Troy D. on January 20, 2016.</p>
+<br>
+<p>Product as described.</p>
+<p>Eric N. on September 9, 2015.</p>
+<br>
 </h3>
