--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -31,8 +31,9 @@ img{
 }
 .dark{
   /*background-color: #242424;*/
-  background-color: rgb(191,77,40);
+  background-color: rgb(192,192,192);
+  /*box-shadow: inset 0 0 10px #000000;*/
   border-color: transparent;
   padding-top: 5px;
-  padding-bottom: 5px;
+  padding-bottom: 10px;
 }
