--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,26 +1,37 @@
 <div class="row">
-  <div class="col-sm-4 col-sm-offset-2">
-    <img src="../../assets/promo1-image.png" alt="">
-  </div>
-  <div class="col-sm-4 col-sm-offset-2">
-    <img src="../../assets/promo2-image.png" alt="">
+  <!-- <div class="col-xs-3">
 
-  </div>
+    <mat-card class="card ripplelink">
+      <img src="../../assets/promo1-image.png" alt="">
+    </mat-card>
+  </div> -->
+  <div class="col-lg-6">
+
+    <mat-card class="card ripplelink">
+      <img src="../../assets/amz_1.jpg" alt="">
+
+    </mat-card>
 </div>
-<div class="row">
-  <div class="col-sm-4 col-sm-offset-2">
-    <img src="../../assets/usauto1.jpg" alt="">
+<div class="col-lg-6">
 
-  </div>
-  <div class="col-sm-4 col-sm-offset-2">
-    <img src="../../assets/usauto2.jpg" alt="">
+  <mat-card class="card ripplelink">
 
-  </div>
+    <img src="../../assets/amz_2.jpg" alt="">
+  </mat-card>
 </div>
-<div class="row">
-  <div class="col-sm-4 col-sm-offset-2">
-    <img src="../../assets/usauto3.jpg" alt="">
 
-  </div>
+<div class="col-lg-6">
+    <mat-card class="card ripplelink">
+    <img src="../../assets/amz_3.jpg" alt="">
+  </mat-card>
+</div>
+
+<div class="col-lg-6">
+    <mat-card class="card ripplelink">
+    <img src="../../assets/amz_4.jpg" alt="">
+  </mat-card>
+</div>
+
+
 
 </div>
