--- a/src/app/purchase/purchase.component.css
+++ b/src/app/purchase/purchase.component.css
@@ -1,6 +1,6 @@
 :host{
   display: block;
-  background-color: rgb(246,247,189);
+  /*background-color: rgb(246,247,189);*/
   height: 700px;
   /*margin-top: 100px;*/
 }
