done for the night

--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -1,12 +1,12 @@
 <div #tickler class="row">
-  <div class="col-md-11 col-xs-offset-1">
+  <div class="col-md-12">
     <img src="https://j.gifs.com/76E55y.gif" alt="" id="welcome">
+  </div>
+  <div class="jump">
+    <a pageScroll href="#awesomePart"><span class="glyphicon glyphicon-chevron-down"></span></a>
   </div>
 </div>
 
-<div class="jump">
-  <a pageScroll href="#awesomePart"><span class="glyphicon glyphicon-chevron-down"></span></a>
-</div>
 
 <h3 id="awesomePart" class="text-center">
   <p>"On time, zero shipping and no tax, and best price!"</p>
