--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -31,7 +31,7 @@ img{
 }
 .dark{
   /*background-color: #242424;*/
-  background-color: rgb(192,192,192);
+  background-color: rgba(192,192,192, 0.8);
   /*box-shadow: inset 0 0 10px #000000;*/
   border-color: transparent;
   padding-top: 5px;
