--- a/src/app/site-map/site-map.component.css
+++ b/src/app/site-map/site-map.component.css
@@ -1,7 +1,61 @@
 :host{
   display: block;
-  background-color: rgb(101,86,67);
-  height: 500px;
-  font-size: 24px;
-  /*margin-top: 100px;*/
+  background-color: grey;
+  height: 140px;
+  font-family: helvetica;
+  font-size: 30px;
+  font-weight: 600;
+  /*margin-top: 20px;*/
+  /*margin-bottom: 10px;*/
+  padding: 1em;
 };
+
+.dark{
+  /*background-color: #242424;*/
+  /*background-color: rgba(192,192,192, 0.8);*/
+  /*box-shadow: inset 0 0 10px #000000;*/
+  border-color: transparent;
+  display: block;
+  margin: auto;
+  width: 20%;
+  padding-top: 10px;
+  padding-bottom: 15px;
+}
+
+img {
+  display: block;
+  margin: auto;
+  width: 300px;
+  /*margin-bottom: 10px;*/
+}
+
+.right{
+  float: right;
+  top: 30px;
+  right: 16%;
+  /*right: 0;*/
+  position: absolute;
+}
+
+.left{
+  text-align: center;
+  /*padding: 10px 0;*/
+  top: 30px;
+  left: 16%;
+  float: left;
+  /*right: 50px;*/
+  position: absolute;
+  /*margin-bottom: -100px;*/
+
+}
+
+a{
+  color: rgb(68, 107, 186);
+}
+
+@media screen and (max-width: 770px) {
+  p{
+    display: none;
+  }
+
+}
