--- a/src/app/site-map/site-map.component.html
+++ b/src/app/site-map/site-map.component.html
@@ -1,19 +1,7 @@
-<div class="row">
-  <br><br><br><br><br>
-  <div class="col-xs-6 col-xs-offset-1 text-justify">
-    <ul class="love" style="list-style: none;">
-      <li>Contact</li>
-      <li>Stuff</li>
-      <li>Buy from Amazon</li>
-      <li>Read Wikipedia</li>
-    </ul>
-  </div>
-  <div class="col-xs-4 col-xs-offset-1 text-justify">
-    <ul class="love" style="list-style: none;">
-      <li>Donate to Africa</li>
-      <li>Delete Site</li>
-      <li>Go to Top</li>
-      <li>Email President</li>
-    </ul>
+<div class="header" class="dark">
+  <div class="col-lg-12">
+    <a href="qualitygateopeners@gmail.com"><p class="left">Contact</p></a>
+    <img src="../../assets/header_bg.png" alt="">
+    <a href="https://www.amazon.com/s?marketplaceID=ATVPDKIKX0DER&me=A1DUU5SSOUYI5X&merchant=A1DUU5SSOUYI5X&redirect=true"><p class="right">Amazon</p></a>
   </div>
 </div>
