--- a/src/app/welcome-banner/welcome-banner.component.css
+++ b/src/app/welcome-banner/welcome-banner.component.css
@@ -4,8 +4,10 @@
 }
 
 #welcome {
-  width: 90%;
+  width: 100%;
   height: auto;
+  background-size: cover;
+
 }
 
 .jump{
@@ -18,6 +20,10 @@
   margin-left: 50%;
   margin-top: 30px;
 }
+
+/*img{
+  width: 100%;
+}*/
 
 a:link:not(#exclude), a:visited:not(#exclude) {
     text-decoration: none;
