styling is fun and weird and not quite there

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
   <div class="row">
     <app-header></app-header>
     <app-welcome-banner></app-welcome-banner>
-    <app-tickler></app-tickler>
+    <app-footer></app-footer>
+    <!-- <app-tickler></app-tickler> -->
     <!-- <app-teaser></app-teaser> -->
     <app-products></app-products>
     <app-purchase></app-purchase>
