--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,27 @@
-<p>
-  footer works!
-</p>
+<div class="row">
+
+<!-- <div class="col-lg-12 text-center">
+</div> -->
+
+<div class="col-lg-12 reviews">
+  <h2 class="text-center">
+    Customer Reviews
+  </h2>
+  <br>
+  <br>
+  <br>
+  <br>
+
+<h3 class="text-center">
+  <p>"On time, zero shipping and no tax, and best price!"</p>
+  <p>-Wolf on September 2, 2016.</p>
+<br>
+  <p>Everything excellent!</p>
+  <p>-Troy D. on January 20, 2016.</p>
+<br>
+<p>Product as described.</p>
+<p>Eric N. on September 9, 2015.</p>
+<br>
+</h3>
+</div>
+</div>
