--- a/src/app/teaser/teaser.component.css
+++ b/src/app/teaser/teaser.component.css
@@ -1,6 +1,7 @@
 :host{
   display: block;
-  background-color: rgb(246,247,189);
+  background-color: white;
+  /*background-color: rgb(246,247,189);*/
   /*margin-top: 550px;*/
   /*margin-bottom: 100px;*/
   /*height: 200px;*/
