--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -3,19 +3,24 @@
     <img src="https://j.gifs.com/76E55y.gif" alt="" id="welcome">
   </div>
   <div class="jump">
-    <a pageScroll href="#awesomePart"><span class="glyphicon glyphicon-chevron-down"></span></a>
+    <a pageScroll href="#awesomePart"><img class="glyphicon" src="../../assets/chevron.svg"></a>
   </div>
 </div>
+<div class="col-lg-8 col-lg-offset-2">
 
-
-<h3 id="awesomePart" class="text-center">
-  <p>"On time, zero shipping and no tax, and best price!"</p>
-  <p>-Wolf on September 2, 2016.</p>
-<br>
-  <p>Everything excellent!</p>
-  <p>-Troy D. on January 20, 2016.</p>
-<br>
-<p>Product as described.</p>
-<p>Eric N. on September 9, 2015.</p>
-<br>
-</h3>
+<div id="awesomePart" class="text-center">
+  <h2>
+    ABOUT QUALITY GATE OPENERS
+  </h2>
+  <br><br>
+  <h3>
+    <img src="../../assets/chevron.svg">Quality Gate Openers is dedicated to offering the highest quality gate opener products to the general public.
+    <br>
+    <img src="../../assets/chevron.svg">We carry Sentry gate openers, solar panel kits, keypads, wireless transmitters and other automatic gate opener accessories.
+    <br>
+    <img src="../../assets/chevron.svg">We strive for earth friendly, quality products, that are proudly made in the USA!
+    <br>
+    <img src="../../assets/chevron.svg">With a combined 15 years experience in the automatic gate opener industry, we know what we're doing.
+  </h3>
+</div>
+</div>
