--- a/src/app/site-map/site-map.component.css
+++ b/src/app/site-map/site-map.component.css
@@ -31,7 +31,7 @@ img {
 
 .right{
   float: right;
-  top: 30px;
+  top: 25px;
   right: 16%;
   /*right: 0;*/
   position: absolute;
@@ -40,7 +40,7 @@ img {
 .left{
   text-align: center;
   /*padding: 10px 0;*/
-  top: 30px;
+  top: 25px;
   left: 16%;
   float: left;
   /*right: 50px;*/
@@ -50,10 +50,11 @@ img {
 }
 
 a{
-  color: rgb(68, 107, 186);
+  /*color: rgb(68, 107, 186);*/
+  color: #333;
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 850px) {
   p{
     display: none;
   }
