--- a/src/app/welcome-banner/welcome-banner.component.css
+++ b/src/app/welcome-banner/welcome-banner.component.css
@@ -1,6 +1,8 @@
 :host{
   display: block;
-  /*background-color: rgb(246,247,189);*/
+  /*background-color: white;*/
+  background-color: rgb(246,247,189);
+
 }
 
 #welcome {
@@ -11,15 +13,21 @@
 }
 
 .jump{
-  background-color: rgb(128,188,163);
+  /*background-color: rgb(128,188,163);*/
   height: 70px;
 }
 
 .glyphicon{
-  /*position: relative;*/
-  margin-left: 50%;
-  margin-top: 30px;
+  /*position: absolute;*/
+  display: block;
+  top: -150px;
+  margin: auto;
+  width: 100px;
 }
+
+/*h2{
+  padding-top: 100px;
+}*/
 
 /*img{
   width: 100%;
@@ -31,8 +39,10 @@ a:link:not(#exclude), a:visited:not(#exclude) {
     cursor: pointer;
 }
 
-h3{
+#awesomePart{
+  background-color: rgb(246,247,189);
+
   font-style: italic;
-  padding-top: 305px;
-  padding-bottom: 305px;
+  padding-top: 105px;
+  /*padding-bottom: 305px;*/
 }
