got background color for about section working

--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -2,11 +2,11 @@
   <div class="col-md-12">
     <img src="https://j.gifs.com/76E55y.gif" alt="" id="welcome">
   </div>
-  <div class="jump">
+  <div class="col-md-12 jump">
     <a pageScroll href="#awesomePart"><img class="glyphicon" src="../../assets/chevron.svg"></a>
   </div>
 </div>
-<div class="col-lg-8 col-lg-offset-2">
+<div class="col-lg-12">
 
 <div id="awesomePart" class="text-center">
   <h2>
