--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,20 +1,28 @@
 <div class="row">
-  <!-- <div class="col-xs-3">
+  <div class="col-lg-12 text-center">
+    <h1>
+      Products
+    </h1>
+  </div>
 
-    <mat-card class="card ripplelink">
-      <img src="../../assets/promo1-image.png" alt="">
-    </mat-card>
-  </div> -->
   <div class="col-lg-6">
 
     <mat-card class="card ripplelink">
+      <mat-card-title class="text-center">
+        <h3>
+        Sentry 300 Commercial Grade Automatic Gate Opener
+      </h3>
+      </mat-card-title>
       <img src="../../assets/amz_1.jpg" alt="">
-
     </mat-card>
 </div>
 <div class="col-lg-6">
-
   <mat-card class="card ripplelink">
+    <mat-card-title class="text-center">
+      <h3>
+        Medium 300 Solar Charged Automatic Gate Opener Double Gate Deluxe Kit
+    </h3>
+    </mat-card-title>
 
     <img src="../../assets/amz_2.jpg" alt="">
   </mat-card>
@@ -22,12 +30,22 @@
 
 <div class="col-lg-6">
     <mat-card class="card ripplelink">
+      <mat-card-title class="text-center">
+        <h3>
+        Medium 300 Solar Charged Automatic Gate Opener Double Gate Basic Kit
+      </h3>
+      </mat-card-title>
     <img src="../../assets/amz_3.jpg" alt="">
   </mat-card>
 </div>
 
 <div class="col-lg-6">
     <mat-card class="card ripplelink">
+      <mat-card-title class="text-center">
+        <h3>
+        Medium 300 Solar Charged Automatic Gate Opener Single Gate Fully Automated Kit
+      </h3>
+      </mat-card-title>
     <img src="../../assets/amz_4.jpg" alt="">
   </mat-card>
 </div>
