--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -13,14 +13,26 @@
     ABOUT QUALITY GATE OPENERS
   </h2>
   <br><br>
-  <h3>
-    <img src="../../assets/chevron.svg">Quality Gate Openers is dedicated to offering the highest quality gate opener products to the general public.
-    <br>
-    <img src="../../assets/chevron.svg">We carry Sentry gate openers, solar panel kits, keypads, wireless transmitters and other automatic gate opener accessories.
-    <br>
-    <img src="../../assets/chevron.svg">We strive for earth friendly, quality products, that are proudly made in the USA!
-    <br>
-    <img src="../../assets/chevron.svg">With a combined 15 years experience in the automatic gate opener industry, we know what we're doing.
-  </h3>
+  <!-- <h3> -->
+  <mat-card class="col-lg-8 col-lg-offset-2">
+    <img class="about" src="../../assets/chevron.svg">Quality Gate Openers is dedicated to offering the highest quality gate opener products to the general public.
+
+  </mat-card>
+
+<mat-card class="col-lg-8 col-lg-offset-2">
+
+    <img class="about" src="../../assets/chevron.svg">We carry Sentry gate openers, solar panel kits, keypads, wireless transmitters and other automatic gate opener accessories.
+  </mat-card>
+
+<mat-card class="col-lg-8 col-lg-offset-2">
+
+    <img class="about" src="../../assets/chevron.svg">We strive for earth friendly, quality products, that are proudly made in the USA!
+  </mat-card>
+
+
+    <mat-card class="col-lg-8 col-lg-offset-2">
+    <img class="about" src="../../assets/chevron.svg">With a combined 15 years experience in the automatic gate opener industry, we know what we're doing.
+  </mat-card>
+  <!-- </h3> -->
 </div>
 </div>
