--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,13 +1,17 @@
 :host{
   display: block;
   background-color: rgb(246,247,189);
+  font-family: helvetica;
+  box-shadow: inset 0px 11px 8px -10px #CCC,
+        inset 0px -11px 8px -10px #CCC;
+
 }
 
 .card{
   background-color: white;
   width: auto;
   margin: 2em;
-  /*height: 500px;*/
+  /*height: 600px;*/
   padding: 1em;
 }
 
@@ -22,5 +26,9 @@ img{
   display: block;
   padding: 20px 0;
   width: 100%;
-  height: 454px;
+  /*height: 454px;*/
+}
+
+h1{
+  margin-top: 50px;
 }
