styling and added links

--- a/src/app/site-map/site-map.component.html
+++ b/src/app/site-map/site-map.component.html
@@ -1,6 +1,6 @@
 <div class="header" class="dark">
   <div class="col-lg-12">
-    <a href="qualitygateopeners@gmail.com"><p class="left">Contact</p></a>
+    <a href="mailto:qualitygateopeners@gmail.com"><p class="left">Contact</p></a>
     <img src="../../assets/header_bg.png" alt="">
     <a href="https://www.amazon.com/s?marketplaceID=ATVPDKIKX0DER&me=A1DUU5SSOUYI5X&merchant=A1DUU5SSOUYI5X&redirect=true"><p class="right">Amazon</p></a>
   </div>
