--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -14,25 +14,34 @@
   </h2>
   <br><br>
   <!-- <h3> -->
-  <mat-card class="col-lg-8 col-lg-offset-2">
-    <img class="about" src="../../assets/chevron.svg">Quality Gate Openers is dedicated to offering the highest quality gate opener products to the general public.
+  <mat-card class="col-lg-8 col-lg-offset-2 text-center">
+    <img class="about" src="../../assets/chevron.svg">
+    <p>
+      Quality Gate Openers is dedicated to offering USAutomatic gate opener products with FREE shipping!
+    </p>
 
   </mat-card>
 
-<mat-card class="col-lg-8 col-lg-offset-2">
+<mat-card class="col-lg-8 col-lg-offset-2 text-center">
 
-    <img class="about" src="../../assets/chevron.svg">We carry Sentry gate openers, solar panel kits, keypads, wireless transmitters and other automatic gate opener accessories.
+    <img class="about" src="../../assets/chevron.svg">
+    <p>
+      We carry Sentry gate openers, solar panel kits, keypads, wireless transmitters and other USAutomatic gate opener accessories.
+    </p>
   </mat-card>
 
-<mat-card class="col-lg-8 col-lg-offset-2">
+<mat-card class="col-lg-8 col-lg-offset-2 text-center">
 
-    <img class="about" src="../../assets/chevron.svg">We strive for earth friendly, quality products, that are proudly made in the USA!
+    <img class="about" src="../../assets/chevron.svg">
+    <p>
+      We strive for earth friendly, quality products, that are proudly made in the USA!
+    </p>
   </mat-card>
 
 
-    <mat-card class="col-lg-8 col-lg-offset-2">
+    <!-- <mat-card class="col-lg-8 col-lg-offset-2">
     <img class="about" src="../../assets/chevron.svg">With a combined 15 years experience in the automatic gate opener industry, we know what we're doing.
-  </mat-card>
+  </mat-card> -->
   <!-- </h3> -->
 </div>
 </div>
