--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="col-lg-6">
-
+    <a href="https://www.amazon.com/USAutomatic-020320-Sentry-Commercial-Automatic/dp/B002YBG2U0/ref=sr_1_1?m=A1DUU5SSOUYI5X&s=merchant-items&ie=UTF8&qid=1510244502&sr=1-1">
     <mat-card class="card ripplelink">
       <mat-card-title class="text-center">
         <h3>
@@ -14,9 +14,10 @@
       </h3>
       </mat-card-title>
       <img src="../../assets/amz_1.jpg" alt="">
-    </mat-card>
+    </mat-card></a>
 </div>
 <div class="col-lg-6">
+  <a href="https://www.amazon.com/USAutomatic-020345-Medium-Charged-Automatic/dp/B005G73AYK/ref=sr_1_2?m=A1DUU5SSOUYI5X&s=merchant-items&ie=UTF8&qid=1510244502&sr=1-2">
   <mat-card class="card ripplelink">
     <mat-card-title class="text-center">
       <h3>
@@ -25,10 +26,11 @@
     </mat-card-title>
 
     <img src="../../assets/amz_2.jpg" alt="">
-  </mat-card>
+  </mat-card></a>
 </div>
 
 <div class="col-lg-6">
+  <a href="https://www.amazon.com/USAutomatic-020335-Medium-Charged-Automatic/dp/B0058DHQ1A/ref=sr_1_3?m=A1DUU5SSOUYI5X&s=merchant-items&ie=UTF8&qid=1510244502&sr=1-3">
     <mat-card class="card ripplelink">
       <mat-card-title class="text-center">
         <h3>
@@ -36,10 +38,11 @@
       </h3>
       </mat-card-title>
     <img src="../../assets/amz_3.jpg" alt="">
-  </mat-card>
+  </mat-card></a>
 </div>
 
 <div class="col-lg-6">
+  <a href="https://www.amazon.com/USAutomatic-020350-Charged-Automatic-Automated/dp/B005G73B1M/ref=sr_1_4?m=A1DUU5SSOUYI5X&s=merchant-items&ie=UTF8&qid=1510244502&sr=1-4">
     <mat-card class="card ripplelink">
       <mat-card-title class="text-center">
         <h3>
@@ -47,7 +50,7 @@
       </h3>
       </mat-card-title>
     <img src="../../assets/amz_4.jpg" alt="">
-  </mat-card>
+  </mat-card></a>
 </div>
 
 
