--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -15,7 +15,7 @@
   <br><br>
   <!-- <h3> -->
   <mat-card class="col-lg-8 col-lg-offset-2 text-center">
-    <img class="about" src="../../assets/chevron.svg">
+    <img class="about" src="../../assets/shipping.svg">
     <p>
       Quality Gate Openers is dedicated to offering USAutomatic gate opener products with FREE shipping!
     </p>
@@ -24,7 +24,7 @@
 
 <mat-card class="col-lg-8 col-lg-offset-2 text-center">
 
-    <img class="about" src="../../assets/chevron.svg">
+    <img class="about" src="../../assets/gate.svg">
     <p>
       We carry Sentry gate openers, solar panel kits, keypads, wireless transmitters and other USAutomatic gate opener accessories.
     </p>
@@ -32,7 +32,7 @@
 
 <mat-card class="col-lg-8 col-lg-offset-2 text-center">
 
-    <img class="about" src="../../assets/chevron.svg">
+    <img class="about" src="../../assets/earth.svg">
     <p>
       We strive for earth friendly, quality products, that are proudly made in the USA!
     </p>
