fixing mobile issues

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,12 +3,10 @@
     <app-header></app-header>
     <app-welcome-banner></app-welcome-banner>
     <app-footer></app-footer>
-    <!-- <app-tickler></app-tickler> -->
-    <!-- <app-teaser></app-teaser> -->
     <app-products></app-products>
     <app-purchase></app-purchase>
     <app-video></app-video>
     <app-site-map></app-site-map>
-    <app-header></app-header>
+    <!-- <app-header></app-header> -->
   </div>
 </div>
