--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,5 +1,5 @@
 <div class="header" [ngClass]="{dark: this.sharedService.boolChangeClass}">
-  <div class="col-md-12">
+  <div class="col-xs-12">
     <img src="../../assets/header_bg.png" alt="">
   </div>
 </div>
