--- a/src/app/purchase/purchase.component.css
+++ b/src/app/purchase/purchase.component.css
@@ -13,4 +13,7 @@ padding-bottom: 50px;
 img{
   display: table;
   margin: 0 auto;
+  width: 100%;
+  padding-left: 20vw;
+  padding-right: 20vw;
 }
