--- a/src/app/video/video.component.css
+++ b/src/app/video/video.component.css
@@ -7,13 +7,31 @@
 }
 
 iframe{
-  /*padding-bottom: 80px;*/
   display: table;
   margin: 0 auto;
-  /*top: 100px;*/
+  width: 50%;
+  /*height: 100%;*/
+  background-size: cover;
 }
+
+/*.video-container {
+    position: relative;
+    padding-top: 35px;
+    padding-left: 2em;
+    padding-right: 2em;
+    height: 0;
+    overflow: hidden;
+}*/
 
 h2{
   margin-top: 50px;
   margin-bottom: 50px;
+}
+
+@media screen and (max-width: 600px) {
+  iframe{
+    width: auto;
+    height: 100%;
+  }
+
 }
