--- a/src/app/welcome-banner/welcome-banner.component.css
+++ b/src/app/welcome-banner/welcome-banner.component.css
@@ -54,7 +54,7 @@ a:link:not(#exclude), a:visited:not(#exclude) {
   background-color: rgb(246,247,189);
 
   font-style: italic;
-  padding-top: 75px;
+  /*padding-top: 50px;*/
   /*padding-bottom: 305px;*/
 }
 
