--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -6,7 +6,7 @@
   </div>
 
   <div class="col-lg-6">
-    <a href="https://www.amazon.com/USAutomatic-020320-Sentry-Commercial-Automatic/dp/B002YBG2U0/ref=sr_1_1?m=A1DUU5SSOUYI5X&s=merchant-items&ie=UTF8&qid=1510244502&sr=1-1">
+    <a href="https://www.amazon.com/dp/B002YBG2U0?m=A1DUU5SSOUYI5X&ref_=v_sp_widget_detail_page">
     <mat-card class="card ripplelink">
       <mat-card-title class="text-center">
         <h3>
@@ -17,7 +17,7 @@
     </mat-card></a>
 </div>
 <div class="col-lg-6">
-  <a href="https://www.amazon.com/USAutomatic-020345-Medium-Charged-Automatic/dp/B005G73AYK/ref=sr_1_2?m=A1DUU5SSOUYI5X&s=merchant-items&ie=UTF8&qid=1510244502&sr=1-2">
+  <a href="https://www.amazon.com/dp/B005G73AYK?m=A1DUU5SSOUYI5X&ref_=v_sp_widget_detail_page">
   <mat-card class="card ripplelink">
     <mat-card-title class="text-center">
       <h3>
@@ -30,7 +30,7 @@
 </div>
 
 <div class="col-lg-6">
-  <a href="https://www.amazon.com/USAutomatic-020335-Medium-Charged-Automatic/dp/B0058DHQ1A/ref=sr_1_3?m=A1DUU5SSOUYI5X&s=merchant-items&ie=UTF8&qid=1510244502&sr=1-3">
+  <a href="https://www.amazon.com/dp/B0058DHQ1A?m=A1DUU5SSOUYI5X&ref_=v_sp_widget_detail_page">
     <mat-card class="card ripplelink">
       <mat-card-title class="text-center">
         <h3>
@@ -42,7 +42,7 @@
 </div>
 
 <div class="col-lg-6">
-  <a href="https://www.amazon.com/USAutomatic-020350-Charged-Automatic-Automated/dp/B005G73B1M/ref=sr_1_4?m=A1DUU5SSOUYI5X&s=merchant-items&ie=UTF8&qid=1510244502&sr=1-4">
+  <a href="https://www.amazon.com/dp/B005G73B1M?m=A1DUU5SSOUYI5X&ref_=v_sp_widget_detail_page">
     <mat-card class="card ripplelink">
       <mat-card-title class="text-center">
         <h3>
