just fixed some challenging styling bugs

--- a/src/app/products/products.component.html
+++ b/src/app/products/products.component.html
@@ -1,9 +1,12 @@
-<div class="row">
-  <div class="col-lg-12 text-center">
+<div class="clearfix">
+
+  <div class="col-lg-12 text-center" style="{background-color: black}">
     <h1>
       Our Products
     </h1>
   </div>
+</div>
+<div class="clearfix">
 
   <div class="col-lg-6">
     <a href="https://www.amazon.com/dp/B002YBG2U0?m=A1DUU5SSOUYI5X&ref_=v_sp_widget_detail_page">
@@ -28,6 +31,10 @@
     <img src="../../assets/amz_2.jpg" alt="">
   </mat-card></a>
 </div>
+</div>
+
+<div class="clearfix">
+
 
 <div class="col-lg-6">
   <a href="https://www.amazon.com/dp/B0058DHQ1A?m=A1DUU5SSOUYI5X&ref_=v_sp_widget_detail_page">
@@ -52,7 +59,9 @@
     <img src="../../assets/amz_4.jpg" alt="">
   </mat-card></a>
 </div>
-
-
-
 </div>
+
+<!-- <h2 class="text-center">
+  How to Install
+</h2>
+  <iframe height="480" src="https://www.youtube.com/embed/7GlrxTxTHiE" frameborder="0" allowfullscreen></iframe> -->
