--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -1,4 +1,4 @@
-<div #tickler class="row">
+<div #tickler class="clearfix">
   <div class="col-md-12">
     <img src="https://j.gifs.com/76E55y.gif" alt="" id="welcome">
   </div>
