--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,12 +1,23 @@
 <div class="container-fluid">
   <div class="row">
     <app-header></app-header>
+  </div>
+  <div class="row">
     <app-welcome-banner></app-welcome-banner>
+  </div>
+  <div class="row">
     <app-footer></app-footer>
+  </div>
+  <div class="row">
     <app-products></app-products>
+  </div>
+  <div class="row">
     <app-purchase></app-purchase>
+  </div>
+  <div class="row">
     <app-video></app-video>
+  </div>
+  <div class="row">
     <app-site-map></app-site-map>
-    <!-- <app-header></app-header> -->
   </div>
 </div>
