--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -1,17 +1,29 @@
+
 :host{
   display: block;
   background-color: rgb(246,247,189);
   font-family: helvetica;
   box-shadow: inset 0px 11px 8px -10px #CCC,
         inset 0px -11px 8px -10px #CCC;
-
+  /*padding-bottom: 5em;*/
+  /*height: 1000px;*/
 }
+
+/*:host{
+  display: block;
+  background-color: rgb(128,188,163);
+  padding-bottom: 5em;
+  font-family: helvetica;
+  box-shadow: inset 0px 11px 8px -10px black,
+        inset 0px -11px 8px -10px black;
+}*/
+
+
 
 .card{
   background-color: white;
   width: auto;
   margin: 2em;
-  /*height: 600px;*/
   padding: 1em;
 }
 
@@ -26,7 +38,6 @@ img{
   display: block;
   padding: 20px 0;
   width: 100%;
-  /*height: 454px;*/
 }
 
 h1{
