--- a/src/app/welcome-banner/welcome-banner.component.css
+++ b/src/app/welcome-banner/welcome-banner.component.css
@@ -26,6 +26,7 @@
   top: -185px;
   margin: auto;
   width: 100px;
+  color: rgba(0,0,0,0.8);
 }
 
 /*h2{
@@ -46,7 +47,7 @@ mat-card{
 
 a:link:not(#exclude), a:visited:not(#exclude) {
     text-decoration: none;
-    color: black;
+    color: rgba(0,0,0,0.5);
     cursor: pointer;
 }
 
