--- a/src/app/video/video.component.css
+++ b/src/app/video/video.component.css
@@ -2,6 +2,7 @@
   display: block;
   background-color: rgb(128,188,163);
   padding-bottom: 4em;
+  padding-top: 4em;
   box-shadow: inset 0px 11px 8px -10px black,
         inset 0px -11px 8px -10px black;
 }
@@ -23,9 +24,9 @@ iframe{
     overflow: hidden;
 }*/
 
-h2{
-  margin-top: 50px;
-  margin-bottom: 50px;
+h3{
+  /*margin-top: 50px;*/
+  margin-bottom: 3em;
 }
 
 @media screen and (max-width: 600px) {
