--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,14 +1,9 @@
 
-<div class="col-lg-12 reviews">
-  <h2 class="text-center">
+<div class="col-lg-12">
+  <h3 class="text-center">
     Customer Reviews
-  </h2>
-  <br>
-  <br>
-  <br>
-  <br>
-
-<h3 class="text-center">
+  </h3>
+<h3 class="text-center reviews">
   <p>"On time, zero shipping and no tax, and best price!"</p>
   <p>-Wolf on September 2, 2016.</p>
 <br>
