--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,18 +1,11 @@
 :host{
   display: block;
   width: 100%;
-  /*background-color: rgb(128,188,163);
-  height: 100px;*/
-
-    /*z-index: 3;*/
 }
 
 img{
-  /*margin-left: 100px;*/
+  margin-left: 100px;
   display: block;
-  /*margin: auto;
-  width: 300px;*/
-  /*margin-bottom: 20px;*/
 }
 
 .header{
@@ -32,10 +25,15 @@ img{
   width: 100%;
 }
 .dark{
-  /*background-color: #242424;*/
   background-color: rgba(192,192,192, 0.8);
-  /*box-shadow: inset 0 0 10px #000000;*/
   border-color: transparent;
   padding-top: 5px;
   padding-bottom: 10px;
+}
+
+@media screen and (max-width: 600px){
+  img{
+    margin-left: 0px;
+    margin: auto;
+  }
 }
