--- a/src/app/products/products.component.css
+++ b/src/app/products/products.component.css
@@ -2,23 +2,11 @@
 :host{
   display: block;
   background-color: rgb(246,247,189);
-  font-family: helvetica;
   box-shadow: inset 0px 11px 8px -10px #CCC,
         inset 0px -11px 8px -10px #CCC;
-  /*padding-bottom: 5em;*/
-  /*height: 1000px;*/
+  padding-bottom: 4em;
+  padding-top: 4em;
 }
-
-/*:host{
-  display: block;
-  background-color: rgb(128,188,163);
-  padding-bottom: 5em;
-  font-family: helvetica;
-  box-shadow: inset 0px 11px 8px -10px black,
-        inset 0px -11px 8px -10px black;
-}*/
-
-
 
 .card{
   background-color: white;
@@ -40,8 +28,8 @@ img{
   width: 100%;
 }
 
-h1{
-  margin-top: 50px;
+h3{
+  margin-bottom: 2em;
 }
 
 a{
