--- a/src/app/purchase/purchase.component.css
+++ b/src/app/purchase/purchase.component.css
@@ -1,12 +1,13 @@
 :host{
   display: block;
   /*background-color: rgb(246,247,189);*/
-  height: 700px;
+  /*height: 700px;*/
   /*margin-top: 100px;*/
+  padding-top: 4em;
 }
 
 h3{
-padding-top: 150px;
+/*padding-top: 150px;*/
 padding-bottom: 50px;
 }
 
@@ -16,4 +17,5 @@ img{
   width: 100%;
   padding-left: 20vw;
   padding-right: 20vw;
+  padding-bottom: 4em;
 }
