--- a/src/app/welcome-banner/welcome-banner.component.html
+++ b/src/app/welcome-banner/welcome-banner.component.html
@@ -1,19 +1,25 @@
 <div #tickler class="clearfix">
+  <div class="clearfix">
+
   <div class="col-md-12">
     <img src="https://j.gifs.com/76E55y.gif" alt="" id="welcome">
+  </div>
+  <div class="col-md-12" id="awesomePart">
   </div>
   <div class="col-md-12 jump">
     <a pageScroll href="#awesomePart"><img class="glyphicon" src="../../assets/chevron.svg"></a>
   </div>
 </div>
+</div>
+<div class="clearfix">
+
 <div class="col-lg-12">
 
-<div id="awesomePart" class="text-center">
-  <h2>
-    ABOUT QUALITY GATE OPENERS
-  </h2>
-  <br><br>
-  <!-- <h3> -->
+<div id="about-container" class="text-center">
+  <h3>
+    About Quality Gate Openers
+  </h3>
+
   <mat-card class="col-lg-8 col-lg-offset-2 text-center">
     <img class="about" src="../../assets/shipping.svg">
     <p>
@@ -43,5 +49,6 @@
     <img class="about" src="../../assets/chevron.svg">With a combined 15 years experience in the automatic gate opener industry, we know what we're doing.
   </mat-card> -->
   <!-- </h3> -->
+</div>
 </div>
 </div>
