--- a/src/app/site-map/site-map.component.html
+++ b/src/app/site-map/site-map.component.html
@@ -2,6 +2,6 @@
   <div class="col-lg-12">
     <a href="mailto:qualitygateopeners@gmail.com"><p class="left">Contact</p></a>
     <img src="../../assets/header_bg.png" alt="">
-    <a href="https://www.amazon.com/s?marketplaceID=ATVPDKIKX0DER&me=A1DUU5SSOUYI5X&merchant=A1DUU5SSOUYI5X&redirect=true"><p class="right">Amazon</p></a>
+    <a href="https://www.amazon.com/s?marketplaceID=ATVPDKIKX0DER&me=A1DUU5SSOUYI5X&merchant=A1DUU5SSOUYI5X"><p class="right">Amazon</p></a>
   </div>
 </div>
