--- a/src/app/welcome-banner/welcome-banner.component.css
+++ b/src/app/welcome-banner/welcome-banner.component.css
@@ -1,7 +1,11 @@
 :host{
   display: block;
   /*background-color: white;*/
-  background-color: rgb(246,247,189);
+  /*background-color: rgb(246,247,189);*/
+  /*background-color: rgb(205,215,182);*/
+  background-color: rgb(198,226,232);
+
+
   /*height: 1800px;*/
   box-shadow: inset 0px 11px 8px -10px black,
         inset 0px -11px 8px -10px black;
